# sudidakt

./: Cargo.toml  README.md
src/: lib.rs  model.rs  solver.rs
src/model/: cell_set.rs  digit.rs  digit_counter.rs  digit_set.rs  dimension.rs  grid.rs  group.rs  group_set.rs  index.rs
src/solver/: analysis.rs  analyzer.rs  journal.rs  placement.rs  placer.rs  possible_values.rs  refinement.rs  solver.rs
